@@ -5,7 +5,7 @@ Priority: optional
 Architecture: i386
 Depends: libc6 (>= 2.3.2.ds1-21), libgcc1 (>= 1:3.4.1-3), libstdc++5 (>= 1:3.3.4-1)
 Suggests: bison
-Installed-Size: 1732
+Installed-Size: 1764
 Maintainer: Frank B. Brokken <f.b.brokken@rug.nl>
 Description: Bison-style parser generator for C++
  Bisonc++ was designed after `bison++' by Alain Coetmeur. Bisonc++ adds to
