@@ -1,9 +1,9 @@
-a2d1d5230161251c24ceb235a227090a  usr/bin/bisonc++
+55ce394afdd8382d75aca704e993d62e  usr/bin/bisonc++
 15d29eca313270a3dede897467326a1a  usr/share/bisonc++/bisonc++.cc
 681260dcbc9a5b10ea8aece82cd5c45d  usr/share/bisonc++/bisonc++.h
 72cdfc50d6af15d4e388c0aa0bac4269  usr/share/bisonc++/bisonc++.ih
 1bc0704d0e7857e86d7327021147fed9  usr/share/bisonc++/bisonc++base.h
-f5c4e955683868d9cceb2a1271d11f11  usr/share/man/man1/bisonc++.1.gz
+db08b508ceca6bcc9202637b0e33bd45  usr/share/man/man1/bisonc++.1.gz
 282964a89262cef063700c9bb6c3217d  usr/share/doc/bisonc++/bison-docs/html/bison.html
 4e9bd3a67627f3473a803fafb5bcd5bd  usr/share/doc/bisonc++/bison-docs/html/bison_1.html
 66d32387c680e4dbbf30a3d58e3b4ff9  usr/share/doc/bisonc++/bison-docs/html/bison_10.html
@@ -25,6 +25,10 @@ e8047f5e00264293e7f0cf3a688677d0  usr/share/doc/bisonc++/bison-docs/html/bison_a
 dd4ad0d674b49eaf4c84d60944a264c9  usr/share/doc/bisonc++/bison-docs/html/bison_ovr.html
 3435130af50e4fb9ac9033b65b77af88  usr/share/doc/bisonc++/bison-docs/html/bison_toc.html
 e8040a1c34d16e1b9aeffd40c8f203f0  usr/share/doc/bisonc++/bison-docs/bison.ps.org/bison.ps.gz
+cfb6ceab6911fc544ef58bb7c9e6aab7  usr/share/doc/bisonc++/examples/examples/README
+b6ab8041cccff2449f380488e41e9d03  usr/share/doc/bisonc++/examples/examples/annotations/a2x.h
+0da96db46899e6ae84dadc5921596834  usr/share/doc/bisonc++/examples/examples/annotations/build
+8b03067ec363b8ff2851cd6ccab27be0  usr/share/doc/bisonc++/examples/examples/annotations/demo.cc
 357dda58266dc672d40fb2fd26942e2e  usr/share/doc/bisonc++/examples/examples/annotations/parser/display1.cc
 c891b14b0a2b25eddcb595af3570b7a9  usr/share/doc/bisonc++/examples/examples/annotations/parser/display2.cc
 b399dd16becb1cad87117cb745ab94ad  usr/share/doc/bisonc++/examples/examples/annotations/parser/done.cc
@@ -32,13 +36,9 @@ b399dd16becb1cad87117cb745ab94ad  usr/share/doc/bisonc++/examples/examples/annot
 0a7f19881707987334ea1c0fa3cb6dcb  usr/share/doc/bisonc++/examples/examples/annotations/parser/parser.h
 12273950c882eeca67ba35b83d4d364d  usr/share/doc/bisonc++/examples/examples/annotations/parser/parser.ih
 8bae9a39efc31e505f72d3a67c2d25cb  usr/share/doc/bisonc++/examples/examples/annotations/parser/reset.cc
-b6ab8041cccff2449f380488e41e9d03  usr/share/doc/bisonc++/examples/examples/annotations/a2x.h
-0da96db46899e6ae84dadc5921596834  usr/share/doc/bisonc++/examples/examples/annotations/build
-8b03067ec363b8ff2851cd6ccab27be0  usr/share/doc/bisonc++/examples/examples/annotations/demo.cc
-235a7bf89b73950a1d90205dcc07b942  usr/share/doc/bisonc++/examples/examples/annotations/scanner/scanner.h
 c77f81cf2102ff68cc3a90c1f477bdfe  usr/share/doc/bisonc++/examples/examples/annotations/scanner/lexer
+235a7bf89b73950a1d90205dcc07b942  usr/share/doc/bisonc++/examples/examples/annotations/scanner/scanner.h
 2e0fbaeac8de6e1b01d019c5c348826b  usr/share/doc/bisonc++/examples/examples/annotations/scanner/scanner.ih
-cfb6ceab6911fc544ef58bb7c9e6aab7  usr/share/doc/bisonc++/examples/examples/README
 d8ccb1b729845b5cc3acad10ec6c06a4  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/Makefile
 3954c8110c4bcff16113510b8375f374  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/MyCompiler.cc
 2e1acad8935f3526535d5fe2bd0e5952  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/MyParser.h
@@ -50,60 +50,68 @@ dbeb477cff8ac6127832e61e50956b6f  usr/share/doc/bisonc++/examples/examples/bison
 f3c6f48516a1bb0cd56b26d54f2e4211  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/make
 38879c9b13087bb9a1bafde8213f5813  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/test.txt
 842c41249c0012221ca0522d425f4d1c  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/test2.txt
-627fa8f6360511dd1fe7b42fb90ed2c8  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/FlexLexer.h.gz
+5c0867d2cc24e6e7da9f53a324555a65  usr/share/doc/bisonc++/examples/examples/bison++Example.NEW/FlexLexer.h.gz
 d8ccb1b729845b5cc3acad10ec6c06a4  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/Makefile
 1f22b3eebbc75804c783684d2d9c0752  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/MyCompiler.cc
 a3e999932465c6867cb062fcfc990a4e  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/MyParser.y
 dc8aa15fd78174de6249d36d4bce229b  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/MyScanner.l
 38879c9b13087bb9a1bafde8213f5813  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/test.txt
 842c41249c0012221ca0522d425f4d1c  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/test2.txt
-1bb44011d0541b27ae8ad67ce1df58b2  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/FlexLexer.h.gz
-86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/examples/examples/calcgen/scanner/scanner.h
-5932123deb2260d4eb4d0f0f70493cc5  usr/share/doc/bisonc++/examples/examples/calcgen/scanner/lexer
-e3bc1e30d5b3d2c5b4fd196c75eb091c  usr/share/doc/bisonc++/examples/examples/calcgen/scanner/scanner.ih
+8bf4d80d73429693a9b3f25ac6a632ea  usr/share/doc/bisonc++/examples/examples/bison++Example.ORG/FlexLexer.h.gz
 0a907f39594428a8f94908745d9ba2c7  usr/share/doc/bisonc++/examples/examples/calcgen/Parser.ih
 3b62b2503b2519206bcf68ce5f116015  usr/share/doc/bisonc++/examples/examples/calcgen/build
 61b07bd1f39575e15ffb32e09bf58b30  usr/share/doc/bisonc++/examples/examples/calcgen/example.cc
 ebcd23c6a69118110aec27f267353e37  usr/share/doc/bisonc++/examples/examples/calcgen/example.h
 98f3783d353deb4c76e4c2fb7ba4f5f0  usr/share/doc/bisonc++/examples/examples/calcgen/expressions
-22210a4772edc173b280404250f0f251  usr/share/doc/bisonc++/examples/examples/conflict/conflict
+5932123deb2260d4eb4d0f0f70493cc5  usr/share/doc/bisonc++/examples/examples/calcgen/scanner/lexer
+86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/examples/examples/calcgen/scanner/scanner.h
+e3bc1e30d5b3d2c5b4fd196c75eb091c  usr/share/doc/bisonc++/examples/examples/calcgen/scanner/scanner.ih
 bcc4ae5f0a0ff9cafc105d526a2bee17  usr/share/doc/bisonc++/examples/examples/conflict/build
-86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/examples/examples/input/scanner/scanner.h
-e2ed73416e07462fef9db9ff84595b34  usr/share/doc/bisonc++/examples/examples/input/scanner/lexer
-e3bc1e30d5b3d2c5b4fd196c75eb091c  usr/share/doc/bisonc++/examples/examples/input/scanner/scanner.ih
+22210a4772edc173b280404250f0f251  usr/share/doc/bisonc++/examples/examples/conflict/conflict
+a6ed326b14781c1893831023fe20e513  usr/share/doc/bisonc++/examples/examples/conflict/Parserbase.h
+2bacf96d1df3a31efe12033432bac670  usr/share/doc/bisonc++/examples/examples/conflict/Parser.h
+50811a103aeaa4d8f96d46daf83ac9a1  usr/share/doc/bisonc++/examples/examples/conflict/Parser.ih
+e134440ed2e283012e9d5d48a0e0bae1  usr/share/doc/bisonc++/examples/examples/conflict/parse.cc.gz
 906e8b9e47e1d7556f563653b067d995  usr/share/doc/bisonc++/examples/examples/input/Parser.ih
 3b62b2503b2519206bcf68ce5f116015  usr/share/doc/bisonc++/examples/examples/input/build
 61b07bd1f39575e15ffb32e09bf58b30  usr/share/doc/bisonc++/examples/examples/input/example.cc
 ebcd23c6a69118110aec27f267353e37  usr/share/doc/bisonc++/examples/examples/input/example.h
 ee0755f2ce0500bdacb63de34e166cab  usr/share/doc/bisonc++/examples/examples/input/expressions
-5eb0979be56a2d92557a9c6000cd2942  usr/share/doc/bisonc++/examples/examples/location/scanner/scanner.h
-c51f83202301c3168b7ee98f6f298040  usr/share/doc/bisonc++/examples/examples/location/scanner/lexer
-b907f640141473f1070992a27cf9f49e  usr/share/doc/bisonc++/examples/examples/location/scanner/scanner.ih
+e2ed73416e07462fef9db9ff84595b34  usr/share/doc/bisonc++/examples/examples/input/scanner/lexer
+86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/examples/examples/input/scanner/scanner.h
+e3bc1e30d5b3d2c5b4fd196c75eb091c  usr/share/doc/bisonc++/examples/examples/input/scanner/scanner.ih
 677bc7718f178d35a785cab11e867245  usr/share/doc/bisonc++/examples/examples/location/Parser.h
 b4b99b2738bcf74bedf654bf3f5ad5b1  usr/share/doc/bisonc++/examples/examples/location/Parser.ih
 bfd6086d9bab666ccbf2a374f3dadfc0  usr/share/doc/bisonc++/examples/examples/location/build
 61b07bd1f39575e15ffb32e09bf58b30  usr/share/doc/bisonc++/examples/examples/location/example.cc
 ebcd23c6a69118110aec27f267353e37  usr/share/doc/bisonc++/examples/examples/location/example.h
 cdcaf54a174d4027bc4efd25ecccf79a  usr/share/doc/bisonc++/examples/examples/location/expressions
-0e787bf1f09b37493a4eb736f7e2362d  usr/share/doc/bisonc++/examples/examples/simpledemo/parser/grammar
+c51f83202301c3168b7ee98f6f298040  usr/share/doc/bisonc++/examples/examples/location/scanner/lexer
+5eb0979be56a2d92557a9c6000cd2942  usr/share/doc/bisonc++/examples/examples/location/scanner/scanner.h
+b907f640141473f1070992a27cf9f49e  usr/share/doc/bisonc++/examples/examples/location/scanner/scanner.ih
 59312f5acbb4b31220980f6f4c076f04  usr/share/doc/bisonc++/examples/examples/simpledemo/build
 4b14370f42e766d64da179dad0713afe  usr/share/doc/bisonc++/examples/examples/simpledemo/demo.cc
 cfc5b8c85579daadae6a42a207de8d71  usr/share/doc/bisonc++/examples/examples/simpledemo/demo.h
-86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/examples/examples/simpledemo/scanner/scanner.h
+0e787bf1f09b37493a4eb736f7e2362d  usr/share/doc/bisonc++/examples/examples/simpledemo/parser/grammar
+ee3972b5ed9964af2edfc3dd383a8290  usr/share/doc/bisonc++/examples/examples/simpledemo/parser/parserbase.h
+bc4d0d8ab4b37b0d8100cf58bab67687  usr/share/doc/bisonc++/examples/examples/simpledemo/parser/parser.h
+85ccae0d6045db0c4dbb8b1e8d17e91a  usr/share/doc/bisonc++/examples/examples/simpledemo/parser/parser.ih
+1a222d44c7d2c96d7b509b0ad97ae691  usr/share/doc/bisonc++/examples/examples/simpledemo/parser/parse.cc.gz
 c39a55d1d0f68ab608c95b4dd7815e04  usr/share/doc/bisonc++/examples/examples/simpledemo/scanner/lexer
+86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/examples/examples/simpledemo/scanner/scanner.h
 ff59e519bd16e343bf0b3a2a779d9e85  usr/share/doc/bisonc++/examples/examples/simpledemo/scanner/scanner.ih
 3716ad8f11078d118263f17d4090cdc5  usr/share/doc/bisonc++/man/bisonc++man.html
+3a09f30672cdd90ca094b58c9ed996e4  usr/share/doc/bisonc++/man/calculator/README
+1303ed32d014d84346a1c3a940da86ff  usr/share/doc/bisonc++/man/calculator/build
+1ce9ecf37b9f8afd98acc6fbedd6ec1c  usr/share/doc/bisonc++/man/calculator/calculator.cc
 c3fc4ae37542df5b5b66a8d112d8f130  usr/share/doc/bisonc++/man/calculator/parser/calculator.h
 5a9bdd8e29ffde378581069ff70e7ffc  usr/share/doc/bisonc++/man/calculator/parser/calculator.ih
 02c352910d8db9861de3a1c6c24d5323  usr/share/doc/bisonc++/man/calculator/parser/calculatorbase.h
 aafe8beb92c7c88dc49b192f3bc9b968  usr/share/doc/bisonc++/man/calculator/parser/grammar
-f008721bb61c200fa5c1da6de18687d0  usr/share/doc/bisonc++/man/calculator/parser/parse.cc.gz
-3a09f30672cdd90ca094b58c9ed996e4  usr/share/doc/bisonc++/man/calculator/README
-1303ed32d014d84346a1c3a940da86ff  usr/share/doc/bisonc++/man/calculator/build
-86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/man/calculator/scanner/scanner.h
+208eabd5bdb2377f865ed134c517d195  usr/share/doc/bisonc++/man/calculator/parser/parse.cc.gz
 bc3822bf595542a4cb438c45c3f31295  usr/share/doc/bisonc++/man/calculator/scanner/lexer
+86fca53e12493400e0e8a2435662800a  usr/share/doc/bisonc++/man/calculator/scanner/scanner.h
 b907f640141473f1070992a27cf9f49e  usr/share/doc/bisonc++/man/calculator/scanner/scanner.ih
-1ce9ecf37b9f8afd98acc6fbedd6ec1c  usr/share/doc/bisonc++/man/calculator/calculator.cc
 45b9713cf8ea34bc4d67bb031545d55b  usr/share/doc/bisonc++/manual/bisonc++.html
 c83e33c87e39b101b2b769e92ca3ad16  usr/share/doc/bisonc++/manual/bisonc++01.html
 90e6db2580fddcdc4a1f2a217c19d9aa  usr/share/doc/bisonc++/manual/bisonc++02.html
@@ -115,5 +123,5 @@ c83e33c87e39b101b2b769e92ca3ad16  usr/share/doc/bisonc++/manual/bisonc++01.html
 c752d9580e00a63ebddc3e1102f83e33  usr/share/doc/bisonc++/manual/bisonc++08.html
 052077e1bf85799173fde8ad9b281efd  usr/share/doc/bisonc++/manual/bisonc++09.html
 9c4e019872020e297d0b2f406196139c  usr/share/doc/bisonc++/copyright
-08d9e76e837f829abbb20d21e0ed8346  usr/share/doc/bisonc++/COPYING.gz
-9e4b5358117fe5bebc06c18f340b268c  usr/share/doc/bisonc++/changelog.gz
+3e5071fb1d826def27a69bf21f32c4aa  usr/share/doc/bisonc++/COPYING.gz
+47a2d04e890347711b45afe7d9fce0d1  usr/share/doc/bisonc++/changelog.gz
