@@ -1,2 +1,5 @@
 #!/bin/sh
-scp bisoncpp.jpg index.html fbb@shell.sourceforge.net:/home/groups/b/bi/bisoncpp/htdocs/
+
+yodl2html index.yo
+
+scp ../bisonc++/documentation/man*/*.html bisoncpp.jpg index.html fbb@shell.sourceforge.net:/home/groups/b/bi/bisoncpp/htdocs/
